# BITAmin-DA-finance-project

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: events.yml
dags/: kfi_pipeline_dags.py
docker/: Dockerfile
docs/: 0510_meeting.md  0510_meeting_usage.md  beginner_onboarding.md  data_specification.md  workflow.html
sql/: 001_schema.sql
src/bitamin_finance/: __init__.py  cli.py  config.py
src/bitamin_finance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bitamin_finance/data/: __init__.py  classifiers.py  krx_client.py
src/bitamin_finance/db/: connection.py  schema.py
src/bitamin_finance/etl/: __init__.py  jobs.py  loaders.py
src/bitamin_finance/features/: __init__.py  exposure.py  kfi.py
src/bitamin_finance/reporting/: exports.py
src/bitamin_finance/validation/: __init__.py  event_study.py
tests/: test_classifiers.py  test_cli_import.py  test_exposure.py  test_kfi.py  test_validation.py
