[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitamin-finance"
version = "0.1.0"
description = "Korean ETF ownership Fragility Index data warehouse, ETL, validation, and dashboard."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "pykrx==1.2.8",
  "SQLAlchemy>=1.4,<2.0",
  "psycopg2-binary>=2.9",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "statsmodels>=0.14",
  "scipy>=1.12",
  "plotly>=5.22",
  "streamlit>=1.36",
  "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
airflow = [
  "apache-airflow>=2.9,<3.0",
]

[project.scripts]
bitamin-finance = "bitamin_finance.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
